# ddhash-sample

./: Makefile.am  Makefile.in  config.h.in  configure  configure.ac
src/: Makefile.am  Makefile.in  ddhash_sample.c
